	* Updated 'NEWS'.
	* Incremented the package version to 1.0.2.
2021-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Updated the AR_GET_DISTRO() macro to use '/etc/os-release'.
2021-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Updated the Qt Toolkit dependency to use Qt5.
2021-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the build system in 'xdg/' to deal with
	non-consolehelper setups.
2021-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Added 'compile' to the 'MAINTAINERCLEANFILES' rule.
2021-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make deb' target.
2021-06-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.0.0.
2021-09-30 Fred Gleason <fredg@paravelsystems.com>
	* Added RockyLinux to the list of supported distros.
2023-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Added Linux Mint to the list of supported distros.
	* Enabled usermode authentication for Debian-ish distros.
2023-04-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.0.1.
2025-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up compiler warnings.
2025-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Upgraded Qt5 to Qt6.
2025-02-15 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up autotools warning in 'configure.ac'.
2025-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a hpiinfo-cmd(1) utility.
2025-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke generation of the hpiinfo-cmd(1) man page.
2025-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused hpiinfo-cmd(1) to be installed with the
	incorrect name.
2025-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.0.0.
2025-02-19 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the DEB package that caused dependency information
	to be omitted.
2025-02-19 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 3.0.1.